Rename Oberth::Service:: and Oberth:: namespaces

--- a/dist.ini
+++ b/dist.ini
@@ -6,3 +6,6 @@ copyright_year   = 2017
 version = 0.001
 
 [@Author::ZMUGHAL]
+AutoPrereqs.skip[0] = ^Oberth::Block::Service::GitHub::Repo$
+AutoPrereqs.skip[1] = ^Oberth::Block::Service::Coveralls$
+AutoPrereqs.skip[2] = ^Oberth::Block::Service::GitHub$
