--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-name    = Oberth-CLI
+name    = Orbital-CLI
 author  = Zakariyya Mughal <zmughal@cpan.org>
 license = Perl_5
 copyright_holder = Zakariyya Mughal
