--- a/dist.ini
+++ b/dist.ini
@@ -6,3 +6,5 @@ copyright_year   = 2017
 version = 0.001
 
 [@Author::ZMUGHAL::OrbitalTransfer]
+; [AutoPrereqs]
+AutoPrereqs.skip[0] = ^Bash::Completion::
